--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,8 @@ body{
   width: 100%;
   display:flex;
   flex-direction:column;
-  background-image: url("https://www.caycon.com/wp-content/uploads/2014/11/How-to-Spot-and-Avoid-Tech-Bubbles.jpg"); 
+  background-image: url("https://www.caycon.com/wp-content/uploads/2014/11/How-to-Spot-and-Avoid-Tech-Bubbles.jpg");
+  background-size: auto;
   color: white;
   position: relative;
 }
@@ -63,7 +64,29 @@ footer {
 
 
 .App {
-  text-align: center;
+  display: flex;
+  flex:1;
+  width:100%;
+  flex-direction:column;
+  justify-content:space-between;
+  margin-bottom: 40px;
+}
+
+.messages {
+  flex: 1;
+  display: flex;
+  flex-direction: column-reverse;
+  overflow-y: scroll;
+}
+
+.msg-bubble {
+  color: white;
+  background: black;
+  border-radius: 10px;
+  border: 1px solid white;
+  padding: 5px 12px;
+  display: inline-block;
+  margin: 8px 15px;
 }
 
 .App-logo {
