--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,9 @@ body{
   width: 100%;
   display:flex;
   flex-direction:column;
-  background-image: url("https://www.caycon.com/wp-content/uploads/2014/11/How-to-Spot-and-Avoid-Tech-Bubbles.jpg");
-  background-size: auto;
+  background: #009fff; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #009fff, #ec2f4b); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #009fff, #ec2f4b);
   color: white;
   position: relative;
 }
